--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,9 @@
 // libs
 @import "libs/normalize.scss";
 
+// global
+@import "global/global.scss";
+
 // blocks
 @import "blocks/page.scss";
 @import "blocks/header.scss";
