--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -19,3 +19,22 @@ a {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.container {
+  width: 280px;
+  padding: 0 20px;
+}
+
+  @media (min-width: 768px) {
+    .container {
+      width: 728px;
+      padding: 0 20px;
+    }
+  }
+
+  @media (min-width: 1440px) {
+    .container {
+      width: 1359px;
+      padding: 0 40px;
+    }
+  }
