--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,4 +13,14 @@
 
 // blocks
 @import "blocks/page.scss";
-@import "blocks/header.scss";
+@import "blocks/page-header.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/site-list.scss";
+@import "blocks/user-list.scss";
+@import "blocks/new-products.scss";
+@import "blocks/slider.scss";
+@import "blocks/advantages.scss";
+@import "blocks/catalog.scss";
+@import "blocks/form.scss";
+@import "blocks/map.scss";
+@import "blocks/page-footer.scss";
