--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,4 +3,6 @@
   --Base-Black: #333333;
   --Base-Secondary: #F0EBFF;
   --Base-White: #FFFFFF;
+  --Base-Primary: #7859CF;
+  --Base-Grey: #BDBDBD;
 }
