--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,3 +24,5 @@
 @import "blocks/form.scss";
 @import "blocks/map.scss";
 @import "blocks/page-footer.scss";
+@import "blocks/subtitle.scss";
+@import "blocks/title.scss";
