--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,7 +1,19 @@
-// advantages
-// advantages__wrapper
+.advantages {
+  background-color: var(--Base-White);
+}
+.advantages__wrapper {
+  padding: 50px 20px 60px 20px;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.advantages__text {
+  text-align: center;
+}
 
 .advantages__title {
+  margin: 0;
+  margin-top: 4px;
   font-weight: 700;
   font-size: 24px;
   line-height: 36px;
@@ -16,23 +28,74 @@
 
 .advantages__list {
   list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  @media (min-width: 768px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  @media (min-width: 1440px) {
+    padding-top: 80px;
+  }
 }
 
-// advantages__item
+.advantages__item {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  @media (min-width: 768px) {
+    max-width: 340px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    flex-wrap: nowrap;
+    gap: 20px;
+  }
+  @media (min-width: 1440px) {
+    max-width: 340px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
+
+.advantages__inner {
+  max-width: 270px;
+
+  @media (min-width: 1440px) {
+    max-width: 320px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
 
 .advantages__subtitle {
+  margin: 0;
   font-weight: 700;
   font-size: 18px;
   line-height: 32px;
   color: var(--Base-Black);
+  text-align: center;
 
   @media (min-width: 768px) {
     font-size: 24px;
     line-height: 36px;
+    text-align: start;
   }
 }
 
 .advantages__description {
+  margin: 0;
+  margin-top: 10px;
+  text-align: center;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
@@ -41,5 +104,11 @@
   @media (min-width: 768px) {
     font-size: 16px;
     line-height: 24px;
+    text-align: start;
+  }
+  @media (min-width: 1440px) {
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
   }
 }
