--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,8 +1,7 @@
-// main-nav
+.main-nav {
+  display: flex;
+}
 
-// main-nav__toggle
-
-// main-nav__wrapper
 
 .main-nav__list {
   list-style: none;
