--- a/source/sass/blocks/new-products.scss
+++ b/source/sass/blocks/new-products.scss
@@ -1,11 +1,85 @@
 // new-products
-// new-products__wrapper
-// new-products__list
-// new-products__item
-// new-products__images
-// new-products__inner
+// .new-products__list {
+//   margin: 0 auto;
+// }
+
+.new-products__item {
+
+}
+
+.new-products__item-wrapper {
+  max-width: 1440px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 60px;
+  position: relative;
+
+  @media (min-width: 768px) {
+    padding-top: 60px;
+    padding-bottom: 308px;
+    margin-bottom: 180px;
+  }
+
+  @media (min-width: 1440px) {
+    flex-direction: row;
+    padding: 30px 105px 60px 105px;
+    margin-bottom: 0;
+    gap: 30px;
+  }
+}
+
+.new-products__item--flat-white {
+  background-color: var(--Flat-White);
+}
+
+.new-products__item--lavender-latte {
+  background-color: var(--Lavender-Latte);
+}
+
+.new-products__item--espresso {
+  background-color: var(--Espresso);
+}
+
+.new-products__images {
+  @media (min-width: 768px) {
+    order: 2;
+    position: absolute;
+    bottom: -188px;
+  }
+
+  @media (min-width: 1440px) {
+    position: static;
+    order: 0;
+  }
+}
+
+.new-products__inner {
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 10px;
+
+  @media (min-width: 1440px) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+.new-products__title {
+  margin: 0;
+  margin-top: 4px;
+  padding: 0;
+}
 
 .new-products__description {
+  max-width: 608px;
+  margin-top: 10px;
+  padding: 0 20px;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
@@ -17,11 +91,32 @@
     font-size: 20px;
     line-height: 32px;
   }
+
+  @media (min-width: 1440px) {
+    text-align: start;
+    padding: 0;
+  }
 }
 
-// new-products__holder
+.new-products__holder  {
+  gap: 20px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.new-products__holder-inner {
+  display: flex;
+  gap: 6px;
+  align-items: baseline;
+  flex-direction: row;
+}
 
 .new-products__price-old {
+  margin: 0;
   font-weight: 400;
   font-size: 16px;
   line-height: 32px;
@@ -30,6 +125,7 @@
 }
 
 .new-products__price {
+  margin: 0;
   font-weight: 600;
   font-size: 20px;
   line-height: 32px;
@@ -41,5 +137,9 @@
   font-size: 16px;
   line-height: 24px;
   text-align: center;
+  padding: 8px 20px;
   color: var(--Base-White);
+  border: none;
+  border-radius: 4px;
+  background-color: var(--Base-Primary);
 }
