--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,4 +1,21 @@
-// site-list
+.site-list {
+  display: none;
+  @media (min-width: 768px) {
+    display: flex;
+  }
+}
+// лист для бургер меню
+.site-list--nojs {
+  left: 0;
+  right: 0;
+  top: 60px;
+  margin: 0 auto;
+  padding: 0;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .site-list__item {
   font-weight: 500;
@@ -6,6 +23,17 @@
   line-height: 16px;
   text-transform: uppercase;
   text-decoration: none;
+  padding: 32px 20px;
+}
+
+// бургер меню
+.site-list__item--active {
+  display: flex;
+  background: var(--Base-White);
+  width: 100%;
+  justify-content: center;
+  border-top: solid 1px var(--Base-Secondary);
+  border-bottom: solid 1px var(--Base-Secondary);
 }
 
 .site-list__link {
