--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,6 +14,7 @@
 // blocks
 @import "blocks/page.scss";
 @import "blocks/page-header.scss";
+@import "blocks/page-main.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/site-list.scss";
 @import "blocks/user-list.scss";
