--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,4 +5,7 @@
   --Base-White: #FFFFFF;
   --Base-Primary: #7859CF;
   --Base-Grey: #BDBDBD;
+  --Flat-White: #F3EBE1;
+  --Lavender-Latte: #EAE6FC;
+  --Espresso: #E5E6E8;
 }
