--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,4 +8,7 @@
   --Flat-White: #F3EBE1;
   --Lavender-Latte: #EAE6FC;
   --Espresso: #E5E6E8;
+  --Light-Grey: #F8F8F8;
+  --Alt-Light-Grey: #E2E2E2;
+  --Alt-Primary-Lighter: #9070EC;
 }
