--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,4 +11,6 @@
   --Light-Grey: #F8F8F8;
   --Alt-Light-Grey: #E2E2E2;
   --Alt-Primary-Lighter: #9070EC;
+  --Primary-Darker: #593CAC;
+  --Alt-Primary-Opacity: rgba(120, 89, 207, 0.25);
 }
