--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -2,9 +2,18 @@
   background-color: var(--Base-White);
 }
 .advantages__wrapper {
-  padding: 50px 20px 60px 20px;
+  padding: 50px 20px 50px 20px;
   max-width: 1440px;
   margin: 0 auto;
+  @media (min-width: 768px) {
+    padding: 70px 20px;
+    margin-bottom: 30px;
+  }
+  @media (min-width: 1440px) {
+    padding: 70px 20px;
+    padding-top: 100px;
+    margin-bottom: 55px;
+  }
 }
 
 .advantages__text {
@@ -28,16 +37,20 @@
 
 .advantages__list {
   list-style: none;
+  margin: 0;
   padding: 0;
+  padding-top: 30px;
   display: flex;
   flex-direction: column;
   gap: 32px;
   @media (min-width: 768px) {
     flex-direction: row;
     flex-wrap: wrap;
+    padding-top: 35px;
   }
   @media (min-width: 1440px) {
-    padding-top: 80px;
+    padding-top: 60px;
+    gap: 0;
   }
 }
 
@@ -50,18 +63,20 @@
   justify-content: center;
   flex-wrap: nowrap;
   @media (min-width: 768px) {
+    margin-top: 20px;
     max-width: 340px;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     flex-wrap: nowrap;
-    gap: 20px;
+    gap: 25px;
   }
   @media (min-width: 1440px) {
     max-width: 340px;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    gap: 6px;
   }
 }
 
@@ -79,6 +94,7 @@
 
 .advantages__subtitle {
   margin: 0;
+  margin-top: 5px;
   font-weight: 700;
   font-size: 18px;
   line-height: 32px;
@@ -94,7 +110,7 @@
 
 .advantages__description {
   margin: 0;
-  margin-top: 10px;
+  margin-top: 5px;
   text-align: center;
   font-weight: 400;
   font-size: 14px;
