--- a/source/sass/blocks/new-products.scss
+++ b/source/sass/blocks/new-products.scss
@@ -1,12 +1,3 @@
-// new-products
-// .new-products__list {
-//   margin: 0 auto;
-// }
-
-.new-products__item {
-
-}
-
 .new-products__item-wrapper {
   max-width: 1440px;
   margin: 0 auto;
@@ -17,7 +8,6 @@
   align-items: center;
   padding-top: 20px;
   padding-bottom: 60px;
-  position: relative;
 
   @media (min-width: 768px) {
     padding-top: 60px;
@@ -27,10 +17,14 @@
 
   @media (min-width: 1440px) {
     flex-direction: row;
-    padding: 30px 105px 60px 105px;
+    padding: 20px 105px 95px;
     margin-bottom: 0;
     gap: 30px;
   }
+}
+
+.new-products__list {
+  position: relative;
 }
 
 .new-products__item--flat-white {
@@ -49,7 +43,7 @@
   @media (min-width: 768px) {
     order: 2;
     position: absolute;
-    bottom: -188px;
+    bottom: -195px;
   }
 
   @media (min-width: 1440px) {
@@ -61,7 +55,7 @@
 .new-products__inner {
   margin: 0 auto;
   text-align: center;
-  padding-top: 10px;
+  padding-top: 5px;
 
   @media (min-width: 1440px) {
     display: flex;
@@ -95,6 +89,7 @@
   @media (min-width: 1440px) {
     text-align: start;
     padding: 0;
+    margin-top: 20px;
   }
 }
 
@@ -134,7 +129,7 @@
 
 .new-products__button {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 24px;
   text-align: center;
   padding: 8px 20px;
@@ -142,4 +137,89 @@
   border: none;
   border-radius: 4px;
   background-color: var(--Base-Primary);
+}
+
+.new-products__button:hover {
+  background-color: var(--Alt-Primary-Lighter);
+}
+
+.new-products__button:active {
+  background-color: var(--Primary-Darker);
+}
+
+.new-products__button:disabled {
+  background-color: var(--Base-Grey);
+}
+
+.new-products__prev {
+  background: none;
+  border: none;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  @media (min-width: 768px) {
+    left: 3%;
+  }
+  @media (min-width: 1440px) {
+    left: 2%;
+  }
+}
+
+.new-products__prev:hover {
+  background: linear-gradient(90deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+.new-products__prev:active {
+  background: linear-gradient(90deg, rgba(120, 89, 207, 0.25) 0%, rgba(120, 89, 207, 0) 100%);
+}
+
+.new-products__next:hover {
+  background: linear-gradient(-90deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+.new-products__next:active {
+  background: linear-gradient(-90deg, rgba(120, 89, 207, 0.25) 0%, rgba(120, 89, 207, 0) 100%);
+}
+
+.new-products__next {
+  background: none;
+  border: none;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  top: 50%;
+  right: 0;
+  @media (min-width: 768px) {
+    right: 3%;
+  }
+  @media (min-width: 1440px) {
+    right: 2%;
+  }
+}
+
+.new-products__toggles {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: absolute;
+  bottom: 300px;
+  left: 43%;
+  right: 50%;
+  gap: 8px;
+  display: none;
+  @media (min-width: 1440px) {
+    display: flex;
+  }
+}
+
+.new-products__slider-toggle {
+  padding: 2px 30px;
+  width: 62px;
+  height: 4px;
+  background: var(--Base-White);
+  border: none;
+}
+
+.new-products__slider-toggle--current {
+  background: var(--Base-Primary);
 }
