--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -2,9 +2,49 @@
   display: none;
   @media (min-width: 768px) {
     display: flex;
+    margin: 0;
+    padding: 0;
+  }
+  @media (min-width: 1440px) {
+    justify-content: space-around;
+    width: 459px;
   }
 }
-// лист для бургер меню
+
+.site-list__item {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.site-list__link {
+  color: var(--Base-Black);
+  padding: 32px 20px;
+  @media (min-width: 768px) {
+    padding: 32px 20px;
+  }
+}
+
+.site-list__link:hover {
+  color: var(--Base-Primary);
+}
+
+.site-list__link:focus {
+  color: var(--Base-Primary);
+}
+
+.site-list__link:active {
+  color: var(--Base-Primary);
+  background-color: var(--Base-Secondary);
+}
+
+.site-list__link--active {
+  color: var(--Base-Primary);
+  border-bottom: 1px solid var( --Base-Primary);
+}
+
 .site-list--nojs {
   left: 0;
   right: 0;
@@ -15,27 +55,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.site-list__item {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 16px;
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 32px 20px;
+  z-index: 9;
 }
 
 // бургер меню
 .site-list__item--active {
   display: flex;
   background: var(--Base-White);
-  width: 100%;
   justify-content: center;
   border-top: solid 1px var(--Base-Secondary);
   border-bottom: solid 1px var(--Base-Secondary);
-}
-
-.site-list__link {
-  color: var(--Base-Blac);
 }
