--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -4,18 +4,33 @@
   justify-content: center;
   align-content: center;
   flex-direction: row;
+  width: 180px;
+  @media (min-width: 768px) {
+    width: 120px;
+  }
+  @media (min-width: 1440px) {
+    width: 261px;
+    gap: 25px;
+  }
 }
 
 .user-list__item {
-  padding: 32px 20px;
+  width: 60px;
   text-align: center;
   display: flex;
   gap: 8px;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-end;
+  padding: 32px 20px;
+  @media (min-width: 768px) {
+    align-items: center;
+    justify-content: center;
+  }
+  @media (min-width: 1440px) {
+    width: 120px;
+  }
 }
-
-// user-list__login
-
-// user-list__login-icon
 
 .user-list__text {
   display: none;
@@ -37,4 +52,21 @@
   @media (min-width: 768px) {
     display: none;
   }
+}
+
+.user-list__text:hover {
+  color: var(--Base-Primary);
+}
+
+.user-list__item:focus {
+  color: var(--Base-Primary); 
+}
+
+.user-list__item:active {
+  color: var(--Base-Primary);
+  background-color: var(--Base-Secondary);
+}
+
+.user-list__login-icon:active path {
+  fill: var(--Base-Primary);
 }
