--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 
 // libs
 @import "libs/normalize.scss";
+@import "libs/leaflet.scss";
 
 // global
 @import "global/global.scss";
@@ -23,7 +24,7 @@
 @import "blocks/advantages.scss";
 @import "blocks/catalog.scss";
 @import "blocks/form.scss";
-@import "blocks/map.scss";
+@import "blocks/maps.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/subtitle.scss";
 @import "blocks/title.scss";
