--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,9 +5,10 @@
 // variables
 @import "variables.scss";
 
-// libs
+// libs 
 @import "libs/normalize.scss";
 @import "libs/leaflet.scss";
+@import "libs/swiper-bundle.scss";
 
 // global
 @import "global/global.scss";
@@ -20,7 +21,6 @@
 @import "blocks/site-list.scss";
 @import "blocks/user-list.scss";
 @import "blocks/new-products.scss";
-@import "blocks/slider.scss";
 @import "blocks/advantages.scss";
 @import "blocks/catalog.scss";
 @import "blocks/form.scss";
@@ -30,4 +30,4 @@
 @import "blocks/title.scss";
 @import "blocks/checkbox-form.scss";
 @import "blocks/radio-form.scss";
-@import "blocks/select-form.scss";
+@import "blocks/swiper.scss";
